--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.20.2
   fl_chart: ^1.0.0
   get: ^4.7.2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
